# btre_django_cms

./: .gitignore  .prettierignore  README.md  data_model.txt  docker-compose.yml  pyproject.toml  requirements.txt
accounts/: urls.py  views.py
btre/: settings.py  urls.py
btre/static/css/: admin.css
btre/static/js/: main.js
contacts/: admin.py  models.py  urls.py  views.py
contacts/migrations/: 0001_initial.py  0002_alter_contact_contact_date.py  0002_alter_contact_phone.py
listings/: admin.py  choices.py  models.py  views.py
listings/migrations/: 0001_initial.py
pages/: views.py
realtors/: admin.py  models.py
realtors/migrations/: 0001_initial.py
templates/: base.html
templates/accounts/: dashboard.html  login.html  register.html
templates/admin/: base_site.html
templates/listings/: listing.html  listings.html  search.html
templates/pages/: about.html  index.html
templates/partials/: _alerts.html  _navbar.html
