[tool.poetry]
name = "btre"
version = "0.1.0"
description = "CMS to publish real estate offers"
authors = ["Silas Mederer <mederersilas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2.7"
autopep8 = "^2.0.4"
pylint = "^3.0.2"
psycopg2-binary = "^2.9.9"
pillow = "^10.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
