[tool.poetry]
name = "BT Real Estate House Sales CMS"
version = "0.1.0"
description = "This CMS allows BT Real Estate staff to manage and showcase house listings for sale in the USA."
authors = ["Silas Mederer <mederersilas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2.7"
autopep8 = "^2.0.4"
pylint = "^3.0.2"
psycopg2-binary = "^2.9.9"
pillow = "^10.1.0"
pylint-django = "^2.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
